fixed overlapping scrollbar

--- a/css/gruseltour.css
+++ b/css/gruseltour.css
@@ -89,7 +89,7 @@ form input {
 	background-color: #fdfdfd;
 	bottom: 0;
 	right: 0;
-	padding-right: 10px;
+	padding-right: 20px;
 	padding-bottom: 10px;
 	padding-top: 10px;
 	padding-left: 12px;
